# memory-gate

./: .gitignore  .gitleaks.toml  .pre-commit-config.yaml  CODE_REVIEW_FIXES_SUMMARY.md  Dockerfile  PYTHON_313_MIGRATION_SUMMARY.md  README.md  SECURITY.md  config.example.toml  config.example.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  test_metrics.json  type_errors_checklist.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: ci.yml  close-issues-on-main.yml  commitizen.yml  lint.yml  ruff-auto-fix.yml  security.yml  test.yml
docs/: POC_SPECIFICATION.md  QUICKSTART.md  TASK_002_SUMMARY.md  TASK_003_SUMMARY.md  api_documentation.md  build-research.md  dmll_for_ai_frameworks.md  implementation_plan.md  memory_gate_project_spec.md  progress_tracker.md  project_tracker.md
docs/security/: chromadb-cve-2026-45829.md  chromadb_startup_guard.py
examples/: api_usage.py  basic_usage.py  memory_operations.py  provider_config.py
helm/memory-gate/: Chart.yaml  values.yaml
helm/memory-gate/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  hpa.yaml  service.yaml  serviceaccount.yaml
scripts/: run_tests.ps1
src/memory_gate/: __init__.py  agent_interface.py  cli_handlers.py  config.py  consolidation.py  embedding_catalog.py  main.py  memory_gateway.py  memory_protocols.py  metrics.py  ollama_bridge.py
src/memory_gate/agents/: __init__.py  infrastructure_agent.py  simple_adapter.py
src/memory_gate/api/: __init__.py  app.py  cli.py  dependencies.py  models.py
src/memory_gate/api/routes/: __init__.py  generate.py  health.py  memory.py
src/memory_gate/providers/: __init__.py  base.py  ollama.py  openapi.py  registry.py
src/memory_gate/storage/: __init__.py  in_memory.py  vector_store.py
tests/: README_LOGGING_TESTS.md  conftest.py  helpers.py  metrics_recorder.py  test_agent_integration.py  test_agent_interface_unit.py  test_api.py  test_config.py  test_consolidation.py  test_embedding_catalog.py  test_infrastructure_agent_unit.py  test_learning_context.py  test_logging.py  test_main.py  test_main_extended.py  test_memory_gateway.py  test_metrics_module.py  test_metrics_recorder.py  test_ollama_bridge.py  test_vector_store_unit.py
tests/agents/: test_simple_adapter.py
tests/benchmarks/: test_memory_store_benchmarks.py
tests/regression/: __init__.py  conftest.py  test_vector_store_regression.py
tests/storage/: DISABLED_test_vector_store.py  test_in_memory.py  test_vector_store.py
