[project]
name = "memory-gate"
version = "0.1.0"
description = "Dynamic memory learning layer for AI agents"
authors = [{name = "Tyler Zervas", email = "tz-dev@vectorweight.com"}]
maintainers = [{name = "Tyler Zervas", email = "maintainers@vectorweight.com"}]
license = {text = "MIT"}
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0.0",
    "asyncio-mqtt>=0.16.0", # Currently unused, consider removing if not planned
    "numpy>=2.3.1",
    # "scikit-learn>=1.3.0", # Currently unused, consider removing if not planned
    # "redis>=5.0.0", # Currently unused, consider removing if not planned for core
    "prometheus-client>=0.19.0", # For exposing Prometheus metrics
]

[project.optional-dependencies]
dev = [
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
    "pytest-cov>=6.2.1",
    "black>=25.1.0",
    "mypy>=1.5.0",
    "ruff>=0.0.290",
]
gpu = [
    "torch>=2.1.0",
    "transformers>=4.35.0",
    "sentence-transformers>=4.1.0",
]
storage = [
    "chromadb>=1.0.13",
    "qdrant-client>=1.6.0",
    "redis>=6.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py312']

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=memory_gate",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=85",
]

